<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/menu"
      android:icon="@drawable/ic_settings"
      android:title="Menu"
      app:showAsAction="always">

    <menu>

          <item android:id="@+id/how_it_works"
              android:icon="@drawable/ic_info"
              app:showAsAction="never"
              android:title="@string/how_it_works" />

          <item android:id="@+id/tell_others"
              android:icon="@drawable/ic_share"
              app:showAsAction="never"
              android:title="@string/tell_others" />

          <item android:id="@+id/rate"
              android:icon="@drawable/ic_star"
              app:showAsAction="never"
              android:title="@string/rate" />

          <item android:id="@+id/source"
              android:icon="@drawable/ic_code"
              app:showAsAction="never"
              android:title="@string/source" />

          <item android:id="@+id/support"
              android:icon="@drawable/ic_mail"
              app:showAsAction="never"
              android:title="@string/contact_support" />

          <item android:id="@+id/translate"
              android:icon="@drawable/ic_translate"
              app:showAsAction="never"
              android:title="@string/translate" />
        </menu>

      </item>


</menu>