<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/view_toolbar"/>

            <ImageView
                android:id="@+id/image"
                android:scaleType="centerInside"
                android:src="@drawable/rate"
                android:maxHeight="800px"
                android:maxWidth="800px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:fontFamily="sans-serif-light"
                android:textColor="@color/colorPrimary"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rate_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_margin="32dp"
        android:id="@+id/bottom"
        app:layout_constraintBottom_toBottomOf="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            app:cornerRadius="16dp"            android:id="@+id/later"
            android:text="@string/later_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="64dp"/>
        <com.google.android.material.button.MaterialButton
            app:cornerRadius="16dp"
            android:id="@+id/never"
            android:text="@string/never_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="64dp"/>
        <com.google.android.material.button.MaterialButton
            app:cornerRadius="16dp"
            android:id="@+id/rate"
            android:text="@string/rate_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="64dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>